[project]
name = "api-worker"
version = "0.1.0"
description = ""
authors = [
    {name = "Ole Mathias Heggem",email = "olemathias.aa.heggem@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pynetbox (>=7.4.1,<8.0.0)",
    "redis[hiredis] (>=5.2.1,<6.0.0)",
    "schedule (>=1.2.2,<2.0.0)",
    "netaddr (>=1.3.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
