[project]
name = "gondul-api"
version = "0.2.0"
description = "Gondul 2.0 API"
authors = [
    {name = "Ole Mathias Heggem",email = "olemathias.aa.heggem@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "redis[hiredis] (>=5.2.1,<6.0.0)",
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "pynetbox (>=7.4.1,<8.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "black (>=25.1.0,<26.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
